--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "pixi-live2d",
   "version": "0.0.1",
   "description": "Display live2D model as a sprite in pixi.js.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "prepublish": "npm run build",
+    "build": "webpack --progress --colors",
     "dev": "webpack-dev-server --config ./webpack.config.example.js --progress --colors --hot --host 0.0.0.0 --compress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,15 +20,15 @@
     "type": "git",
     "url": "https://github.com/avgjs/pixi-live2d.git"
   },
-  "license": "Apache-2.0",
+  "license": "MIT",
   "dependencies": {
+  },
+  "devDependencies": {
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
     "babel-preset-latest": "^6.16.0",
-    "webpack": "^1.13.2"
-  },
-  "devDependencies": {
     "pixi.js": "^4.0.3",
+    "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.2"
   }
 }
